<resources>
    <string name="app_name">Araba Ev Motosiklet</string>
    <string name="wortise_app_id">00000000-0000-0000-0000-123456789abc</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="applovin_id">F9VAb231d3sd2d328JB0k-qedqwd3dd13sdf1d2s3</string>
    <string name="facebook_app_id">234234234234324</string>
    <string name="onesignal_app_id">e3043462-0d20-49ff-be5e-c973123620f9</string>
    <string name="made_with_in">Made With ❤ in Sri Lanka</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="category">Category</string>
    <string name="latest">Latest</string>
    <string name="city">City</string>
    <string name="database">Dashboard</string>
    <string name="chat_private">Chat Private</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout_success">Logout Successful</string>
    <string name="new_to_logistics">New to Logistics?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="registering">Registering..</string>
    <string name="full_name">Full name</string>
    <string name="telephone_number">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="by_signing_up_re_agree_to_oue">By signing up,You are agree to our</string>
    <string name="and">and</string>
    <string name="skip">Skip</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="sure_delete_account">Are you sure you want to delete this Account?</string>
    <string name="not_log">Not Logged In</string>
    <string name="about">About Us</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="love_this_app">Love this app? Let us Know in the Google Play Store how we can make it even better</string>
    <string name="share_the_app">Share the app with your friends and family</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="invalid_user">Invalid User</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="upgrade">Upgrade</string>
    <string name="its_time_to_upgrade">Its time to Upgrade to the latest version of our application to get the best experience.</string>
    <string name="do_it_now">DO IT NOW</string>
    <string name="maintenance">Maintenance</string>
    <string name="temporarily_down_for_maintenance">Temporarily Down for Maintenance</string>
    <string name="we_are_performing_scheduled">we are performing scheduled maintenance. we should be back online shortly.</string>
    <string name="try_again_later">Try again later</string>
    <string name="select_language">Select Language</string>
    <string name="sniffing_detected">Sniffing Detected</string>
    <string name="turn_off_all_sniffers_tools">Turn off all sniffers Tools and Vpn tools to access app</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="turn_off_developer_mode">Turn off Developer Mode to access the app</string>
    <string name="err_name">Please Enter Name</string>
    <string name="err_email">Please Enter Email</string>
    <string name="err_password">Please Enter Password</string>
    <string name="err_cpassword">Please Enter Confirm Password</string>
    <string name="err_pass_not_match">Confirm Password not matched</string>
    <string name="err_pass_end_space">Please do not add space at end</string>
    <string name="err_password_sort">This password is too shor</string>
    <string name="err_invalid_email">Invalid Email</string>
    <string name="err_phone">Enter Phone</string>
    <string name="err_gender">Selected gender</string>
    <string name="err_cannot_use_features">Cannot use some of the features without requested permission</string>
    <string name="err_cannot_empty">Field cannot be empty</string>
    <string name="err_login_google">Error while login with google</string>
    <string name="err_no_data_found">No Data Found</string>
    <string name="err_no_cat_found">No Categories Found</string>
    <string name="err_server">Server Error</string>
    <string name="err_unauthorized_access">Unauthorized Access</string>
    <string name="err_server_not_connected">Server not connected</string>
    <string name="err_internet_not_connected">Please connect to internet</string>
    <string name="err_try_internet_connected">Please connect to internet and try again</string>
    <string name="upload_success">Upload Success</string>
    <string name="already_added">Already Added</string>
    <string name="stream_not_found">Unfortunately stream url does not found please report it</string>
    <string name="select_image">Select Image</string>
    <string name="try_again">Try Again</string>
    <string name="refresh">Refresh</string>
    <string name="no_notification">No Notification</string>
    <string name="get_more">Get more post</string>
    <string name="for_you">For You</string>
    <string name="fresh_recommendations">Fresh Recommendations</string>
    <string name="edit">Edit</string>
    <string name="sure_delete_uploaded_image">Are you sure you want to delete uploaded image?</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="app_theme">App Theme</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
    <string name="theme_classic">Classic</string>
    <string name="theme_dark_grey">Dark Grey</string>
    <string name="theme_dark_blue">Dark Blue</string>
    <string name="theme_dark">Dark</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear cache data</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="this_app_privacy_policy">This app privacy policy</string>
    <string name="social_links">Social links, policy</string>
    <string name="this_app_terms">This app Terms and Conditions</string>
    <string name="enable_push_notification">Enable Push Notification</string>
    <string name="on_off_notification">On/off Notification</string>
    <string name="app_language">App Language</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="report_any_issues">Report any issues you may have en countered with the app content or its functionality.</string>
    <string name="please_describe_the_problem">Please describe the problem…</string>
    <string name="submit">Submit</string>
    <string name="rating">Rating</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="select_rating">Select Rating</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="report_message">Enter your text here…</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="continue_with_phone">Continue with phone</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="continue_">Continue</string>
    <string name="verify_and_continue">Verify and Continue</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="request_again">Request again</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="please_enter_valid_code">Please enter valid code</string>
    <string name="code_is_sent_to">Code is sent to - </string>
    <string name="you_ll_receive_a_4_digit_code_to_verify_next">You\'ll receive a 6 digit code to verify next.</string>
    <string name="go_to_profile_page">Go to profile page and click on OTP verification. Then upload your post</string>
    <string name="go_to_profile">Go to profile page</string>
    <string name="promote">Promote</string>
    <string name="add_promotions">Add Promotions</string>
    <string name="select_ad_for_promotion">Select ad for Promotion</string>
    <string name="make_your_ad_stand_out">Make your ad stand out!</string>
    <string name="get_up_to">Get up to 10 times more responses by applying ad promotion</string>
    <string name="select_one_option">Select one option</string>
    <string name="subscription_proceed">PROCEED</string>
    <string name="payment_option">Payment Option</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">Stripe</string>
    <string name="bank_pay">BankPay</string>
    <string name="pay_stack">PayStack</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="no_payment_gateway">There is currently not any payment gateway is available so Please choose Free Plan. </string>
    <string name="select_gateway">Please select any one of them payment options</string>
    <string name="paypal_display_website">https://nemosofts.com/</string>
    <string name="stripe_token_error">Some error occurred when generating stripe token</string>
    <string name="pay_via">Pay : %s %s via %s</string>
    <string name="payment">Payment</string>
    <string name="paypal_payment_error_1">an extremely unlikely failure occurred</string>
    <string name="paypal_payment_error_2">The user canceled.</string>
    <string name="paypal_payment_error_3">An invalid Payment was submitted</string>
    <string name="paypal_payment_error_4">Paypal failure</string>
    <string name="pay_stack_error_1">PayStack failure</string>
    <string name="stripe_payment_error_1">Stripe failure</string>
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">Account number</string>
    <string name="account_details">Account details</string>
    <string name="supported_format">Supported format are .jpg and .png</string>
    <string name="comment">Comment</string>
    <string name="no_comment">No Comments</string>
    <string name="write_comment">Message</string>
    <string name="enter_comment">Please enter comment</string>
    <string name="conn_net_post_comment">Please connect internet and post comment</string>
    <string name="sure_deleted">Are you sure you want to deleted?</string>
    <string name="favourite">Favourite</string>
    <string name="create_new_ad">Create New Ad</string>
    <string name="todo">TODO</string>
</resources>