<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_latest"
        android:icon="@drawable/ic_archive"
        android:title="@string/latest" />

    <item
        android:id="@+id/nav_city"
        android:icon="@drawable/ic_direct"
        android:title="@string/city" />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_direct"
        android:title="@string/category" />

    <item
        android:id="@+id/nav_post_add"
        android:icon="@drawable/ic_add"
        android:title="@string/create_new_ad" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_favourite"
        android:icon="@drawable/ic_save_fav"
        android:title="@string/favourite" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_messages"
        android:title="@string/chat_private" />

    <item
        android:id="@+id/nav_database"
        android:icon="@drawable/ic_driver"
        android:title="@string/database" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />

</menu>