<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/tv_empty_msg"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/err_no_data_found"
        android:textColor="?ns_title"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_empty_try"
        android:background="@drawable/bg_err_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp">

        <ImageView
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_refresh"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:tint="?colorAccent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_empty"
            android:paddingStart="@dimen/_1sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:textSize="@dimen/_13ssp"
            android:textColor="?colorAccent"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>