<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.chat.CommentActivity"
    android:background="?ns_bg_sub">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?ns_bg"
        app:navigationIcon="@drawable/ic_close"
        app:navigationIconTint="?ns_bg_tint"
        app:titleCentered="true"
        app:title="@string/comment"
        app:titleTextColor="?ns_bg_tint" />

    <View
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="?ns_border" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/ll_bottom" />

    <FrameLayout
        android:id="@+id/fl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginBottom="?attr/actionBarSize" />

    <androidx.nemosofts.view.SmoothProgressBar
        android:id="@+id/pb"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:cpb_color="#FFee44"
        app:cpb_colors="@array/progress_colors"
        app:cpb_max_sweep_angle="300"
        app:cpb_min_sweep_angle="10"
        app:cpb_rotation_speed="1.0"
        app:cpb_stroke_width="@dimen/_4sdp"
        app:cpb_sweep_speed="1.0" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp">

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/bg_add_comment"
            android:gravity="top"
            android:hint="@string/write_comment"
            android:imeOptions="actionSend"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:textSize="@dimen/_12ssp" />

        <ImageView
            android:id="@+id/iv_comment"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_send"
            app:tint="?ns_bg_tint" />

    </LinearLayout>

</RelativeLayout>